# spacebot

./: CHANGELOG.md  CHANGES.md  README.md
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/crates/macos/src/: lib.rs
desktop/src-tauri/crates/macos/src-swift/: window.swift
desktop/src-tauri/src/: main.rs  proxy.rs
docs/: desktop-app-umbrel-setup.md
interface/: package.json
interface/src/: platform.ts  router.tsx
interface/src/api/: client.ts
interface/src/components/: ConnectionScreen.tsx  Sidebar.tsx
interface/src/components/settings/: AppearanceSection.tsx  DesktopSection.tsx  constants.ts  index.ts  types.ts
interface/src/hooks/: useServer.tsx  useTheme.ts
interface/src/routes/: Settings.tsx
