[package]
name = "spacebot-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Spacebot"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["cookies", "json", "stream"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
bytes = "1"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
sb-desktop-macos = { path = "crates/macos" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
